# template_python

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/actions/docker_down/: action.yml
.github/actions/docker_up/: action.yml
.github/workflows/: pylint.yml  pytest.yml
config/: sample.env
scripts/setup/: 01_setup_project.sh  02_build_docker.sh  03_run_docker.sh  bump_version.sh  docker_exec.sh
template_python/: __init__.py
tests/: load_package.py  test_load_package.py
