[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "template_python"
dynamic = ["version"]
description = "A new Python project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Add your project dependencies here
]

[tool.setuptools.packages.find]
where = ["template_python"]

[tool.setuptools.dynamic]
version = {attr = "__version__"}
