[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template_python"
dynamic = ["version"]
description = "A new Python project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Add your project dependencies here
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "template_python.__version__"}
